<resources>
    <string name="app_name">recom</string>
    <string name="app_name_big">RECOM</string>
    <string name="text_app_desc">Record the Meeting</string>
    <string name="text_app_desc_kr">우리들의 목소리를 문서로</string>
    <string name="text_solo_record">개인 녹음하기</string>
    <string name="text_every_record">단체 녹음하기</string>
    <string name="title_state">상태 :</string>
    <string name="text_save">저장</string>
    <string name="clear">클리어</string>
    <string name="text_show_clear_document">정리된 문서 보기</string>
    <string name="text_result_desc">당신의 회의가\n 정리되었습니다!</string>
    <string name="text_share_meeting">회의를 공유해 주세요</string>
    <string name="text_input_subject">주제를 입력해 주세요.</string>
    <string name="text_not_subject">무제</string>
</resources>