<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="kr.hs.pandabear.recom.view.activity.StartActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <TextView
            android:id="@+id/tv_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/nanum_aceb"
            android:text="@string/app_name_big"
            android:textColor="@color/color_black"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/tv_app_title_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_title_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_acb"
            android:text="@string/text_app_desc"
            android:textColor="@color/color_gray700"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@id/tv_app_title"
            app:layout_constraintStart_toStartOf="@id/tv_app_title"
            app:layout_constraintTop_toBottomOf="@id/tv_app_title" />

        <ImageView
            android:id="@+id/iv_main"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_write"
            app:layout_constraintBottom_toTopOf="@id/tv_app_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_title_desc"
            app:tint="@color/color_main" />

        <TextView
            android:id="@+id/tv_app_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_eb"
            android:gravity="center"
            android:text="@string/text_app_desc_kr"
            android:textColor="@color/color_black"
            android:textSize="19sp"
            app:layout_constraintBottom_toTopOf="@id/btn_solo_record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_main" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_solo_record"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="70dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_start_button"
            android:backgroundTint="@color/color_main500"
            android:fontFamily="@font/nanum_b"
            android:text="@string/text_solo_record"
            android:textColor="@color/white"
            android:onClick="@{() -> activity.onClickStartButtons(0)}"
            app:layout_constraintBottom_toTopOf="@id/btn_every_record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_every_record"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="70dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/background_start_button"
            android:backgroundTint="@color/color_main700"
            android:fontFamily="@font/nanum_b"
            android:text="@string/text_every_record"
            android:textColor="@color/white"
            android:onClick="@{() -> activity.onClickStartButtons(1)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>