<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="kr.hs.pandabear.recom.viewmodel.fragment.ResultViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <TextView
            android:id="@+id/tv_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_eb"
            android:gravity="center_horizontal"
            android:text="@string/text_result_desc"
            android:textColor="@color/color_black"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_anim"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_result_title"
            app:layout_constraintBottom_toTopOf="@id/btn_show"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/document_result" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_start_button"
            android:backgroundTint="@color/color_main700"
            android:fontFamily="@font/nanum_eb"
            android:onClick="@{() -> vm.onClickShow()}"
            android:paddingHorizontal="20dp"
            android:text="@string/text_show_clear_document"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/lottie_anim"
            app:layout_constraintBottom_toTopOf="@id/layout_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_share"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/background_share_button"
                android:onClick="@{() -> vm.onClickShare()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:elevation="5dp"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="@id/btn_share"
                app:layout_constraintEnd_toEndOf="@id/btn_share"
                app:layout_constraintStart_toStartOf="@id/btn_share"
                app:layout_constraintTop_toTopOf="@id/btn_share"
                app:tint="@color/color_main" />

            <TextView
                android:id="@+id/tv_share_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nanum_r"
                android:text="@string/text_share_meeting"
                android:textColor="@color/color_black"
                app:layout_constraintEnd_toEndOf="@id/btn_share"
                app:layout_constraintStart_toStartOf="@id/btn_share"
                app:layout_constraintTop_toBottomOf="@id/btn_share" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>